--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -1,5 +1,5 @@
-$font-family-sans-serif: 'Lucida Grande', sans-serif;
-$font-family-serif: 'Roboto Slab', serif;
+$font-family-sans-serif: 'PT Sans', sans-serif;
+$font-family-serif: 'Lato', serif;
 
 $container-large-desktop: 1000px;
 
@@ -15,10 +15,10 @@ $padding-small-horizontal: 12px !default;
 $padding-xs-vertical: 1px !default;
 $padding-xs-horizontal: 6px !default;
 
-$navbar-height: 74px;
-$navbar-inverse-bg: rgba(1, 0, 4, 0.5);
+$navbar-height: 148px;
+$navbar-inverse-bg: transparent;
 $navbar-inverse-link-color: #fff;
-$navbar-inverse-link-hover-color: #ffcc00;
+$navbar-inverse-link-hover-color: #fff;
 $navbar-inverse-link-active-bg: transparent;
 $navbar-border-radius: 0;
 
@@ -51,4 +51,6 @@ $btn-danger-border: $brand-danger !default;
 //$btn-success-bg: #ffcc00 !default;
 //$btn-success-color: #000000 !default;
 
-$grid-float-breakpoint: 1024px;
+$grid-gutter-width: 60px;
+
+$grid-float-breakpoint: 768px;
