--- a/app/views/header/_navigation.html.slim
+++ b/app/views/header/_navigation.html.slim
@@ -1,14 +1,12 @@
 / navigation styled for Bootstrap 3.0
 nav.navbar.navbar-inverse
-  .container
+  .wrapper
     .navbar-header
       button.navbar-toggle[type="button" data-toggle="collapse" data-target=".navbar-collapse"]
         span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+        =image_tag asset_pack_path 'burger.svg'
       = link_to root_path, class: 'navbar-brand' do
-        =image_tag asset_pack_path 'logo.svg'
+        =image_tag asset_pack_path 'logo-2018.png'
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         == render 'header/navigation_links'
