--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,8 @@
 
 <%= yield %>
 <% cache do %>
-  <%= render partial: 'shared/organizator', cached: true %>
-  <%= render partial: 'layouts/footer', cached: true %>
+  <%#= render partial: 'shared/organizator', cached: true %>
+  <%#= render partial: 'layouts/footer', cached: true %>
 <% end %>
 
 <!— Global Site Tag (gtag.js) - Google Analytics —>
