--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -12,97 +12,99 @@
            }
 %>
 
-<div class="container">
-  <%= render 'shared/counters' %>
-</div>
+<%= render 'shared/counters' %>
 
-<div class="container content-container">
+
+
+<div class="wrapper content-container">
+
+  <%= render 'shared/about' %>
 
   <%- if false %>
 
-  <div class="home_top" id="top">
-    Победительницы конкурса
-  </div>
+    <div class="home_top" id="top">
+      Победительницы конкурса
+    </div>
 
-  <div class="home_top-2">
-    МИСС ТУРИЗМ 2017
-  </div>
+    <div class="home_top-2">
+      МИСС ТУРИЗМ 2017
+    </div>
 
-  <%- if @user1.present? %>
-    <div class="owl-carousel home-users home-users-leader">
-      <%- @user1.photos.each do |photo| %>
-        <div class="home-users-item">
-          <%= link_to user_path(@user1), class: "anketa-item" do %>
-            <div class="anketa-item-img">
-              <img class="img-responsive owl-lazy" data-src="<%= photo.photo_src.large %>" />
-            </div>
-            <div class="anketa-item-name">
-              <%= @user1.name %>,
-              <%= @user1.age %>
-            </div>
-            <div class="anketa-item-organization">
-              <%= @user1.organization %>
-            </div>
-          <% end %>
+    <%- if @user1.present? %>
+      <div class="owl-carousel home-users home-users-leader">
+        <%- @user1.photos.each do |photo| %>
+          <div class="home-users-item">
+            <%= link_to user_path(@user1), class: "anketa-item" do %>
+              <div class="anketa-item-img">
+                <img class="img-responsive owl-lazy" data-src="<%= photo.photo_src.large %>" />
+              </div>
+              <div class="anketa-item-name">
+                <%= @user1.name %>,
+                <%= @user1.age %>
+              </div>
+              <div class="anketa-item-organization">
+                <%= @user1.organization %>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+
+    <div class="votes-users">
+      <div class="votes-user">
+        <div class="home_top-3">
+          &nbsp;
+          <br>
+          I ВИЦЕ МИСС ТУРИЗМ
         </div>
-      <% end %>
-    </div>
-  <% end %>
-
-  <div class="votes-users">
-    <div class="votes-user">
-      <div class="home_top-3">
-        &nbsp;
-        <br>
-        I ВИЦЕ МИСС ТУРИЗМ
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user2} %>
       </div>
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user2} %>
-    </div>
-    <div class="votes-user">
-      <div class="home_top-3">
-        &nbsp;
-        <br>
-        II ВИЦЕ МИСС ТУРИЗМ
+      <div class="votes-user">
+        <div class="home_top-3">
+          &nbsp;
+          <br>
+          II ВИЦЕ МИСС ТУРИЗМ
+        </div>
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user3} %>
       </div>
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user3} %>
-    </div>
-    <div class="votes-user">
-      <div class="home_top-3">
-        Мисс Туризм
-        <br>
-        зрительских симпатий
+      <div class="votes-user">
+        <div class="home_top-3">
+          Мисс Туризм
+          <br>
+          зрительских симпатий
+        </div>
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user4} %>
       </div>
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user4} %>
     </div>
-  </div>
 
 
-  <div class="home-subtitle" style="margin-top: 30px">
-    Финалистки конкурса
-  </div>
+    <div class="home-subtitle" style="margin-top: 30px">
+      Финалистки конкурса
+    </div>
 
-  <div class="votes-users">
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user5} %>
+    <div class="votes-users">
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user5} %>
+      </div>
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user6} %>
+      </div>
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user7} %>
+      </div>
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user8} %>
+      </div>
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user9} %>
+      </div>
+      <div class="votes-user">
+        <%= render partial: "shared/anketa_mini_home", locals: {user: @user10} %>
+      </div>
     </div>
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user6} %>
-    </div>
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user7} %>
-    </div>
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user8} %>
-    </div>
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user9} %>
-    </div>
-    <div class="votes-user">
-      <%= render partial: "shared/anketa_mini_home", locals: {user: @user10} %>
-    </div>
-  </div>
 
-  <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
+    <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
 
   <% end %>
 
@@ -158,65 +160,6 @@
   <% end %>
 
 
-
-  <h1 class="home-title" id="about">
-    <div class="home-title-slogan">
-      Конкурс красоты представительниц туриндустрии
-    </div>
-    <div class="home-title-text">
-      Мисс Туризм 2017
-    </div>
-  </h1>
-
-  <div class="home-subtitle">
-    О КОНКУРСЕ
-  </div>
-
-  <div class="heroes">
-
-    <div class="heroes-item">
-      <div class="heroes-item-icon">
-        <%= image_tag(asset_pack_path('icon-woman.svg'), size: "90x90") %>
-      </div>
-      <div class="heroes-item-text">
-        Твоя красота затмит пейзажи Австралии, Доминиканы и Мальдив? Ты удивительна, как розовое
-        озеро в Сенегале, и интересна, как фауна Мадагаскара?
-      </div>
-    </div>
-
-    <div class="heroes-item">
-      <div class="heroes-item-icon">
-        <%= image_tag(asset_pack_path('icon-18.svg'), size: "90x90") %>
-      </div>
-      <div class="heroes-item-text">
-        Тебе 18 +, ты работаешь в турбизнесе и готова украсить собой мир? Тебя ждёт зажигательный
-        всероссийский конкурс «Мисс Туризм»!
-      </div>
-    </div>
-
-    <div class="heroes-item">
-      <div class="heroes-item-icon">
-        <%= image_tag(asset_pack_path('icon-work.svg'), size: "90x90") %>
-      </div>
-      <div class="heroes-item-text">
-        Регистрируйся прямо сейчас и собирай как можно большей лайков в интернет-голосовании
-        - используй шанс стать одной из 10 участниц.
-        Для этого подключай друзей, публикуй вау-новость в своих соцсетях
-      </div>
-    </div>
-
-    <div class="heroes-item">
-      <div class="heroes-item-icon">
-        <%= image_tag(asset_pack_path('icon-hotel.svg'), size: "90x90") %>
-      </div>
-      <div class="heroes-item-text">
-        Состязание финалисток произойдёт в ноябре в шикарном отеле Турции Rixos Sungate,
-        где царит атмосфера вечного праздника и веселья.
-        И пусть победит красивейшая!
-      </div>
-    </div>
-
-  </div>
 
 
 
