--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -205,6 +205,9 @@
 	color: #000000;
 	font-family: 'Lato';
 }
+.home-subtitle-margin{
+	margin-bottom: 32px;
+}
 
 .text-1 {
 	font-family: 'Lato';
@@ -282,107 +285,6 @@
 	}
 }
 
-.etaps {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	max-width: 1200px;
-	margin: 0 auto;
-
-	&:before {
-		content: '';
-		position: absolute;
-		top: 60px;
-		left: 115px;
-		right: 115px;
-		height: 16px;
-		background-color: #ffcc00;
-
-		@media (max-width: 1024px) {
-			top: 37px;
-		}
-	}
-
-	@media (max-width: 700px) {
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-
-		&:before {
-			display: none;
-		}
-	}
-}
-
-.etaps-item {
-	position: relative;
-	width: 230px;
-
-	&:before {
-		content: '';
-		position: absolute;
-		top: 49px;
-		left: 96px;
-		right: 96px;
-		width: 38px;
-		height: 38px;
-		background-color: #ffcc00;
-		border: solid 6px #ffffff;
-		border-radius: 50%;
-
-		@media (max-width: 1024px) {
-			top: 26px;
-		}
-	}
-
-	@media (max-width: 700px) {
-		margin: 0 0 32px;
-		&:before {
-			display: none;
-		}
-	}
-}
-
-.etaps-item-date {
-	margin: 0 0 85px;
-	font-size: 20px;
-	font-weight: bold;
-	line-height: 1.2;
-	text-align: center;
-	color: #909090;
-
-	@media (max-width: 1024px) {
-		margin: 0 0 60px;
-		font-size: 14px;
-	}
-	@media (max-width: 700px) {
-		margin: 0 0 16px;
-		font-size: 20px;
-	}
-}
-
-.etaps-item-action {
-	font-size: 22px;
-	line-height: 1.4;
-	text-align: center;
-	color: #000000;
-
-	@media (max-width: 1024px) {
-		font-size: 14px;
-	}
-	@media (max-width: 700px) {
-		font-size: 22px;
-	}
-}
-
-.etaps-date-info {
-	margin: 80px 0 60px;
-	font-size: 18px;
-	line-height: 1.33;
-	text-align: center;
-	color: #000000;
-}
-
 .home-action {
 	margin: 60px 0 150px;
 	text-align: center;
@@ -395,49 +297,6 @@
 			display: none;
 		}
 	}
-}
-
-.jury-list {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 0;
-}
-
-.jury-item {
-	//width: 220px;
-	margin: 50px 40px 0;
-}
-
-.jury-list-title {
-	margin: 80px 0 -20px;
-}
-
-.jury-item-photo {
-	margin: 0 0 30px;
-	text-align: center;
-	vertical-align: top;
-
-	img {
-		border-radius: 50%;
-	}
-}
-
-.jury-item-name {
-	font-size: 17px;
-	font-weight: bold;
-	line-height: 1.33;
-	text-align: center;
-	color: #000000;
-	text-transform: uppercase;
-}
-
-.jury-item-info {
-	font-size: 12px;
-	line-height: 1.42;
-	text-align: center;
-	color: #000000;
-	text-transform: uppercase;
 }
 
 .owl-carousel {
