--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -19,6 +19,8 @@
 <div class="wrapper content-container">
 
   <%= render 'shared/about' %>
+  <%= render 'shared/steps' %>
+  <%= render 'shared/jury' %>
 
   <%- if false %>
 
@@ -159,249 +161,4 @@
 
   <% end %>
 
-
-
-
-
-  <div class="home-subtitle">
-    Этапы конкурса
-  </div>
-
-
-  <div class="etaps">
-    <div class="etaps-item">
-      <div class="etaps-item-date">
-        с 15 Сентября
-      </div>
-      <div class="etaps-item-action">
-        <b>Подача анкет:</b>
-        <br>
-        до 1000 участников
-      </div>
-    </div>
-    <div class="etaps-item">
-      <div class="etaps-item-date">
-        1 Ноября
-      </div>
-      <div class="etaps-item-action">
-        <b>Отборочный тур:</b>
-        <br>
-        подведение итогов онлайн голосования
-      </div>
-    </div>
-    <div class="etaps-item">
-      <div class="etaps-item-date">
-        5-8 Ноября
-      </div>
-      <div class="etaps-item-action">
-        <b>Финал конкурса:</b>
-        <br>
-        голосование жюри
-        Rixos Sungate,
-        Бельдиби, Турция
-      </div>
-    </div>
-  </div>
-
-  <!--
-    <div class="etaps-date-info">
-      Даты могут быть скорректированы
-    </div>
-  -->
-
-
-  <%- unless user_signed_in? %>
-    <div class="home-action">
-      <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">
-        Принять участие
-        <span class="hide-xs">в конкурсе</span>
-      </button>
-    </div>
-  <% end %>
-
-  <div class="home-subtitle jury-list-title" id="jury">
-    Жюри конкурса
-  </div>
-
-  <div class="jury-list">
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-1.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Дерья Биллюр
-      </div>
-      <div class="jury-item-info">
-        Генеральный директор
-        <br>
-        отеля Rixos Sungate
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-2.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Мерт Эсмен
-      </div>
-      <div class="jury-item-info">
-        Директор отдела продаж
-        <br>
-        и маркетинга отеля
-        <br>
-        Rixos Sungate
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-3.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Рашад Мамедов
-      </div>
-      <div class="jury-item-info">
-        Генеральный директор
-        <br>
-        и владелец компании
-        <br>
-        TBS Group
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-4.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Татьяна Дмитрова
-      </div>
-      <div class="jury-item-info">
-        CEO и Основатель
-        <br>
-        медиахолдинга "Банко"
-      </div>
-    </div>
-
-    <!--
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-5.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Сергей Агафонов
-      </div>
-      <div class="jury-item-info">
-        Генеральный директор
-        <br>
-        сети Магазинов
-        <br>
-        Горящих Путевок
-      </div>
-    </div>
-    -->
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('danilovich.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Евгений Данилович
-      </div>
-      <div class="jury-item-info">
-        Генеральний директор
-        <br>
-        УК Sletat.ru
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('mihriban.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Михрибан Илмаз
-      </div>
-      <div class="jury-item-info">
-        Заместитель Генерального
-        <br>
-        директора по работе
-        <br>
-        с отелями Kilit Global
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('spilman.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Вадим Шпильман
-      </div>
-      <div class="jury-item-info">
-        Генеральный директор
-        <br>
-        OneTouch&Travel
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('ilin.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Владимир Ильин
-      </div>
-      <div class="jury-item-info">
-        Официальный представитель
-        <br>
-        конкурса Мисс Туризм Россия
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('pustov.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Леонид Пустов
-      </div>
-      <div class="jury-item-info">
-        сооснователь
-        <br>
-        TravelStartups
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('pobedkin.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Константин Победкин
-      </div>
-      <div class="jury-item-info">
-        Генеральный директор
-        <br>
-        OnlineTours
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-10.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Анна Багдасарян
-      </div>
-      <div class="jury-item-info">
-        Руководитель отдела по работе
-        <br>
-        с агентствами библио-глобус
-      </div>
-    </div>
-
-  </div>
 </div>
