--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -54,3 +54,6 @@ $btn-danger-border: $brand-danger !default;
 $grid-gutter-width: 60px;
 
 $grid-float-breakpoint: 769px;
+
+$gen-partner-media-item-width: 640px;
+$gen-partner-media-item-height: 480px;
