--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,14 @@
 </head>
 <body>
 <%= render 'header/header' %>
+
+<%- if request.fullpath === "/" %>
+  <%= render 'shared/counters' %>
+<% end %>
+
 <%- flash.each do |name, msg| %>
   <%- if msg.is_a?(String) %>
-    <div class="container">
+    <div class="wrapper content-container">
       <div class="alert alert-dismissible alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
         <button class="close" type="button" data-dismiss="alert" aria-hidden="true">×</button>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
@@ -49,7 +54,6 @@
 
 <%= yield %>
 <% cache do %>
-  <%= render partial: 'shared/organizator', cached: true %>
   <%= render partial: 'layouts/footer', cached: true %>
 <% end %>
 
