--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -4,7 +4,7 @@ header {
 	background-image: url('img/hero-masked.jpg');
 	background-position: center top;
 	background-repeat: no-repeat;
-	background-size: cover;
+	//background-size: cover;
 	background-color: #fff;
 
 	@media (max-width: 960px) {
