--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
                           as: :tel,
                           pattern: "+[0-9]{1} \s{1} [0-9]{3} \s{1} [0-9]{3}-[0-9]{2}-[0-9]{2}",
                           placeholder: "+7 999 999-99-99" %>
-              <%= f.input :email2, as: :email %>
+              <%= f.input :email2, as: :tel %>
               <br>
               <p><small>*Обязательные поля для заполнения</small></p>
               <p>
