--- a/app/views/shared/_steps.html
+++ b/app/views/shared/_steps.html
@@ -10,10 +10,10 @@
         1
       </div>
       <div class="step-label">
-        Подача анкет: до 1000 участников
+        Подача анкет:
       </div>
       <div class="step-date">
-        с 15 сентября до 31 октября
+        с 10 июля  до 10 августа
       </div>
     </div>
 
@@ -25,19 +25,31 @@
         Отборочный тур: онлайн-голосование
       </div>
       <div class="step-date">
-        1—5 ноября
+        с 10 августа до 19 сентября
       </div>
     </div>
+
+    <!--<div class="step">-->
+      <!--<div class="step-value">-->
+        <!--3-->
+      <!--</div>-->
+      <!--<div class="step-label">-->
+        <!--Подведение итогов-->
+      <!--</div>-->
+      <!--<div class="step-date">-->
+        <!--6 ноября-->
+      <!--</div>-->
+    <!--</div>-->
 
     <div class="step">
       <div class="step-value">
         3
       </div>
       <div class="step-label">
-        Подведение итогов
+        Полуфинал
       </div>
       <div class="step-date">
-        6 ноября
+        19 сентября
       </div>
     </div>
 
@@ -46,22 +58,10 @@
         4
       </div>
       <div class="step-label">
-        Полуфинал
+        Финал конкурса
       </div>
       <div class="step-date">
-        7 ноября
-      </div>
-    </div>
-
-    <div class="step">
-      <div class="step-value">
-        5
-      </div>
-      <div class="step-label">
-        Финал конкурса: голосование жюри
-      </div>
-      <div class="step-date">
-        8-9 ноября
+        17-20 октября
       </div>
     </div>
 
