--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -3,6 +3,7 @@
 @import "fonts/ptsans";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~font-awesome/scss/font-awesome";
+@import "logo";
 @import "header";
 @import "profile";
 @import "footer";
