--- a/app/javascript/packs/_footer.scss
+++ b/app/javascript/packs/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-	padding: 30px 0;
-	background: url('img/futter.jpg');
+	padding: 20px 0 100px;
+	background: url('img/bottom.jpg');
 	background-position: center;
 	background-size: cover;
 }
@@ -9,48 +9,95 @@
 	display: flex;
 	justify-content: space-between;
 
-	@media (max-width: 1024px) {
-		flex-wrap: wrap;
-		justify-content: center;
+	@media (max-width: 768px) {
+		flex-direction: column;
+		align-items: center;
+		justify-content: flex-start;
 	}
 }
 
-.copyright {
-	font-size: 14px;
-	line-height: 17px;
-	text-align: right;
-	color: #b6b6b6;
-
-	a {
-		display: inline-block;
-		height: 28px;
-		margin-left: 16px;
-		padding: 5px 16px;
-		border-radius: 3px;
-		border: solid 1px #70b1ff;
-		color: #70b1ff;
-	}
-}
-
-.social-pages {
+.footer-nav {
 	display: flex;
-	align-items: center;
-	font-size: 14px;
-	text-align: right;
-	color: #b6b6b6;
+	justify-content: flex-end;
+	margin: 40px 0;
+	padding: 0;
+	list-style: none;
 
-	@media (max-width: 1024px) {
-		margin-bottom: 20px;
+	li {
+		margin: 0 20px;
+
+		a {
+			font-size: 11px;
+			font-weight: 800;
+			letter-spacing: 1.3px;
+			color: #ffffff;
+			text-transform: uppercase;
+		}
+
+		&.active {
+			a {
+				text-decoration: underline;
+			}
+		}
+	}
+
+	@media (max-width: 768px) {
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		margin: 32px 0;
+
+		li{
+			margin: 0 0 16px;
+			a{
+				font-size: 14px;
+			}
+		}
 	}
 }
 
-.social-pages-label {
-	display: inline-block;
-	margin-right: 24px;
+.footer-contacts{
+	display: flex;
+	justify-content: space-between;
+
+	@media (max-width: 768px) {
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+	}
 }
 
-.social-pages-btn {
+.footer-contact{
+	margin: 0 20px;
+	font-family: 'Lato';
+	font-size: 22px;
+	font-weight: 300;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.21;
+	letter-spacing: normal;
+	color: #ffffff;
+
+	@media (max-width: 768px) {
+		margin: 0 0 32px 0;
+		text-align: center;
+
+		&:last-child{
+			margin: 0;
+		}
+	}
+}
+
+.footer-contact-title{
+	color: #a69e7b;
+}
+
+.footer-contacts-link{
 	display: inline-block;
-	width: 40px;
-	height: 40px;
+	margin-top: 8px;
+	color: #ffffff;
+
+	&:hover{
+		color: #ffffff;
+	}
 }
