--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -55,7 +55,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           li К участию допускаются только сотрудницы туриндустрии
           li Модератор вправе удалить анкету участницы при публикации нецензурных фотографий
           li Модератор может исключить участницу при обнаружении мошеннических действий и накрутки голосов.
-          li По итогам онлайн голосования 1 ноября будут выбраны 10 финалисток для поездки в Rixos Sungate на финал. Перед поездкой на финал необходимо будет еще раз подтвердить свою принадлежность к туриндустрии - визитная карточка или трудовая книжка. Участница будет дисквалифицирована в случае, если не сможет подтвердить свою принадлежность к туризму.
+          li По итогам онлайн голосования будут выбраны 10 финалисток для поездки на финал. Перед поездкой на финал необходимо будет еще раз подтвердить свою принадлежность к туриндустрии - визитная карточка или трудовая книжка. Участница будет дисквалифицирована в случае, если не сможет подтвердить свою принадлежность к туризму.
 
 /#payment.modal.fade aria-labelledby="#paymentLabel" role="dialog" tabindex="-1"
   .modal-dialog role="document"
