--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -14,12 +14,14 @@ h1.home-title#about
   .col-md-6
     .text-2
       p Тебе больше 18, ты работаешь в турбизнесе и готова украсить собой мир? Тебя ждёт зажигательный всероссийский конкурс «Мисс Туризм»!
-      p Регистрируйся прямо сейчас и собирай как можно больше лайков в интернет-голосовании — используй шанс стать одной из 12 участниц.
+      p Регистрируйся прямо сейчас и собирай как можно больше лайков в интернет-голосовании — используй шанс стать одной из 29 участниц.
       p Для этого подключи друзей, публикуй вау-новость в своих соцсетях
     - unless user_signed_in?
       button style="width: 300px" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Участвовать
 
-.text-3 Состязание полуфиналисток пройдет в сентябре в Luxury Partisan Village в рамках Международного Туристического Инвестиционного Форума ITIF
+.text-3
+  |Состязание полуфиналисток пройдет в 19 сентября в Luxury Partisan Village в рамках
+  a href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
 
 .row
   .col-md-6
