--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -7,6 +7,91 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('jury-4.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Татьяна Дмитрова
+      </div>
+      <div class="jury-item-info">
+        CEO и Основатель
+        <br>
+        медиахолдинга "Банко"
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('ilin.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Владимир Ильин
+      </div>
+      <div class="jury-item-info">
+        Официальный представитель
+        <br>
+        конкурса Мисс Туризм Россия
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('chehova.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Анфи́са Че́хова
+      </div>
+      <div class="jury-item-info">
+        Российская теле и радиоведущая,
+        <br>
+        певица, киноактриса
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('сharitidis.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Димитрис Харитидис
+      </div>
+      <div class="jury-item-info">
+        Управляющий директор
+        <br>
+        TEZ TOUR Греция
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('veber.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Наталья Вебер
+      </div>
+      <div class="jury-item-info">
+        Директор по PR и маркетингу
+        <br>
+        в Aldemar Resorts
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('angelopoulos.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Александрос Ангелопулос
+      </div>
+      <div class="jury-item-info">
+        Вице-президент
+        <br>
+        Aldemar Resorts
+      </div>
+    </div>
+
+    <!--
+    <div class="jury-item">
+      <div class="jury-item-photo">
         <%= image_tag(asset_pack_path('jury-1.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
@@ -18,6 +103,7 @@
         отеля Rixos Sungate
       </div>
     </div>
+
 
     <div class="jury-item">
       <div class="jury-item-photo">
@@ -51,21 +137,7 @@
       </div>
     </div>
 
-    <div class="jury-item">
-      <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-4.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Татьяна Дмитрова
-      </div>
-      <div class="jury-item-info">
-        CEO и Основатель
-        <br>
-        медиахолдинга "Банко"
-      </div>
-    </div>
 
-    <!--
     <div class="jury-item">
       <div class="jury-item-photo">
         <%= image_tag(asset_pack_path('jury-5.jpg'), size: "180x180") %>
@@ -81,7 +153,7 @@
         Горящих Путевок
       </div>
     </div>
-    -->
+
 
     <div class="jury-item">
       <div class="jury-item-photo">
@@ -129,20 +201,6 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('ilin.jpg'), size: "180x180") %>
-      </div>
-      <div class="jury-item-name">
-        Владимир Ильин
-      </div>
-      <div class="jury-item-info">
-        Официальный представитель
-        <br>
-        конкурса Мисс Туризм Россия
-      </div>
-    </div>
-
-    <div class="jury-item">
-      <div class="jury-item-photo">
         <%= image_tag(asset_pack_path('pustov.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
@@ -182,6 +240,8 @@
         с агентствами библио-глобус
       </div>
     </div>
+
+    -->
 
   </div>
 </div>
