--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -28,6 +28,21 @@
     <div class="partners-links">
       <a
         class="partners-link"
+        href="https://www.tourdom.ru/"
+        target="_blank"
+      >
+        <%= image_tag(asset_pack_path('tez.png'), size: "250x73", alt: "Турдом") %>
+      </a>
+      <a
+        class="partners-link"
+        href="https://www.tourdom.ru/"
+        target="_blank"
+      >
+        <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "244x31", alt: "Турдом") %>
+      </a>
+      <!--
+      <a
+        class="partners-link"
         href="https://www.bgoperator.ru/"
         target="_blank"
       >
@@ -40,21 +55,16 @@
       >
         <%= image_tag(asset_pack_path('kilit-global.svg'), size: "230x53", alt: "http://kilitglobal.com/") %>
       </a>
+      -->
     </div>
   </div>
 
+  <!--
   <div class="partners-block">
     <div class="partners-title">
       ИНФОПАРТНЕРЫ
     </div>
     <div class="partners-links">
-      <a
-        class="partners-link"
-        href="https://www.tourdom.ru/"
-        target="_blank"
-      >
-        <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "244x31", alt: "Турдом") %>
-      </a>
       <a
         class="partners-link"
         href="http://www.trn-news.ru/"
@@ -71,12 +81,21 @@
       </a>
     </div>
   </div>
+  -->
 
   <div class="partners-block">
     <div class="partners-title">
       ПАРТНЕРЫ
     </div>
     <div class="partners-links">
+      <a
+        class="partners-link"
+        href="http://missvolga.ru/"
+        target="_blank"
+      >
+        <%= image_tag(asset_pack_path('volga-models-copy.png'), size: "219x91", alt: "http://missvolga.ru/") %>
+      </a>
+      <!--
       <a
         class="partners-link"
         href="http://iway.ru/"
@@ -86,19 +105,14 @@
       </a>
       <a
         class="partners-link"
-        href="http://missvolga.ru/"
-        target="_blank"
-      >
-        <%= image_tag(asset_pack_path('volga-models-copy.png'), size: "219x91", alt: "http://missvolga.ru/") %>
-      </a>
-      <a
-        class="partners-link"
         href="https://bronevik.com/"
         target="_blank"
       >
         <%= image_tag(asset_pack_path('bronevik@2x.png'), size: "138x49", alt: "bronevik") %>
       </a>
+      -->
     </div>
+    <!--
     <div class="partners-links">
       <a
         class="partners-link"
@@ -115,5 +129,6 @@
         <%= image_tag(asset_pack_path('logo-bayborodin-co@2x.png'), size: "270x65", alt: "ukab.ru") %>
       </a>
     </div>
+    -->
   </div>
 </div>
