--- a/app/views/shared/_steps.html
+++ b/app/views/shared/_steps.html
@@ -10,10 +10,10 @@
         1
       </div>
       <div class="step-label">
-        Подача анкет:
+        Регистрация участниц
       </div>
       <div class="step-date">
-        с 10 июля  до 10 августа
+        с 10 июля  до 23 июля 
       </div>
     </div>
 
@@ -22,10 +22,10 @@
         2
       </div>
       <div class="step-label">
-        Отборочный тур: онлайн-голосование
+        Онлайн голосвание
       </div>
       <div class="step-date">
-        с 10 августа до 19 сентября
+        с 23 июля  до 2 сентября
       </div>
     </div>
 
@@ -61,7 +61,7 @@
         Финал конкурса
       </div>
       <div class="step-date">
-        17-20 октября
+        17-21 октября
       </div>
     </div>
 
