--- a/app/javascript/packs/_jury.scss
+++ b/app/javascript/packs/_jury.scss
@@ -21,7 +21,8 @@
 }
 
 .jury-item-photo {
-	margin: 0 0 12px;
+	width: 180px;
+	margin: 0 auto 12px;
 	text-align: center;
 	vertical-align: top;
 	border-radius: 50%;
