--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -14,13 +14,14 @@
 
 <div class="wrapper content-container">
 
-  <% cache do %>
+
     <%= render partial: 'shared/about', cached: true %>
     <%= render partial: 'shared/steps', cached: true %>
     <%= render partial: 'shared/jury', cached: true %>
     <%= render partial: 'shared/gen_partner', cached: true %>
     <%= render partial: 'shared/partners', cached: true %>
-  <% end %>
+  <%# cache do %>
+  <%# end %>
 
   <%- if false %>
 
