прикрутил rails_admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,9 @@
 </div>
 -->
 
-<%= yield %>
+<div class="wrapper content-container">
+  <%= yield %>
+</div>
 <% cache do %>
   <%= render partial: 'layouts/footer', cached: true %>
 <% end %>
